<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/txt_error"
        android:textSize="22sp" />

    <View
        android:id="@+id/view_spliter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/txt_title"
        android:background="@color/common_action_bar_splitter" >
    </View>

    <TextView
        android:id="@+id/txt_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_spliter"
        android:layout_margin="10dp"
        android:text="@string/txt_error_message"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_error_message"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/txt_confirm" >
        </Button>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/txt_cancel" >
        </Button>
    </LinearLayout>

</RelativeLayout>